mupdf/TODO
- zathura-pdf-mupdf build fails with:

 | [...]
 | [10/11] Compiling C object 'pdf-mupdf@sha/zathura-pdf-mupdf_search.c.o'.
 | FAILED: pdf-mupdf@sha/zathura-pdf-mupdf_search.c.o
 | gcc -Ipdf-mupdf@sha -I. -I.. -I/usr/pkg/include -I/usr/pkg/include/glib-2.0 -I/usr/pkg/lib/glib-2.0/include -I/usr/pkg/include/gtk-3.0 -I/usr/pkg/include/pango-1.0 -I/usr/pkg/include/fribidi -I/usr/pkg/include/cairo -I/usr/X11R7/include/pixman-1 -I/usr/X11R7/include -I/usr/X11R7/include/freetype2 -I/usr/pkg/include/libpng16 -I/usr/pkg/include/harfbuzz -I/usr/pkg/include/gdk-pixbuf-2.0 -I/usr/pkg/include/gio-unix-2.0 -I/usr/pkg/include/atk-1.0 -I/usr/pkg/include/openjpeg-2.3 -I/usr/include -I/usr/pkg/include/python3.7 -I/usr/X11R7/include/libdrm -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -std=c11 -O2 -O2 -march=haswell -D_FORTIFY_SOURCE=2 -D_XOPEN_SOURCE=600 -fPIC -pthread -D_REENTRANT -DVERSION_MAJOR=0 -DVERSION_MINOR=3 -DVERSION_REV=4 -D_DEFAULT_SOURCE -Wall -Wextra -pedantic -Werror=implicit-function-declaration -Werror=vla -fvisibility=hidden -MD -MQ 'pdf-mupdf@sha/zathura-pdf-mupdf_search.c.o' -MF 'pdf-mupdf@sha/zathura-pdf-mupdf_search.c.o.d' -o 'pdf-mupdf@sha/zathura-pdf-mupdf_search.c.o' -c ../zathura-pdf-mupdf/search.c
 | In file included from /tmp/pkgsrc/print/zathura-pdf-mupdf/work/.buildlink/include/mupdf/fitz.h:11:0,
 |                  from ../zathura-pdf-mupdf/plugin.h:10,
 |                  from ../zathura-pdf-mupdf/search.c:7:
 | ../zathura-pdf-mupdf/search.c: In function 'pdf_page_search_text':
 | /tmp/pkgsrc/print/zathura-pdf-mupdf/work/.buildlink/include/mupdf/fitz/context.h:296:9: error: expected expression before ')' token
 |   ((TYPE*)Memento_label(fz_malloc(CTX, (COUNT) * sizeof(TYPE)), #TYPE "[]"))
 |          ^
 | ../zathura-pdf-mupdf/search.c:42:23: note: in expansion of macro 'fz_malloc_array'
 |    fz_quad* hit_bbox = fz_malloc_array(mupdf_page->ctx, N_SEARCH_RESULTS, sizeof(fz_quad));
 |                        ^~~~~~~~~~~~~~~
 | ninja: build stopped: subcommand failed.

  Investigate further and fix it.
- Readd `curl' option?
